<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.safiraaini.SAFIRAAINI_1202154315_Modul1.SecondActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewmm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:text="@string/makan_malam2"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewrm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewmm"
        android:layout_centerHorizontal="true"
        android:text=" "
        android:textSize="20sp"

        />

    <TextView
        android:id="@+id/textViewmn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewprs"
        android:layout_alignStart="@+id/textViewprs"
        android:layout_below="@+id/textViewrm"
        android:layout_marginTop="43dp"
        android:text="@string/menu"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewmkn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewmn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/txt_nasi_uduk"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewprs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewmkn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:text="@string/porsi" />

    <TextView
        android:id="@+id/textViewangk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewprs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:text="@string/txt_2" />

    <TextView
        android:id="@+id/textViewhrg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewangk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textSize="16sp"
        android:text="Harga" />

    <TextView
        android:id="@+id/textViewrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewhrg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/rupiah"

        android:textSize="30sp"/>


</RelativeLayout>
